[project]
name = "agent-control-evaluator-galileo"
version = "7.10.0"
description = "Galileo Luna evaluator for agent-control"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Agent Control Team" }]
dependencies = [
    "agent-control-evaluators>=7.5.0",
    "agent-control-models>=7.5.0",
    "httpx>=0.24.0",
    "pydantic>=2.12.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.entry-points."agent_control.evaluators"]
"galileo.luna" = "agent_control_evaluator_galileo.luna:LunaEvaluator"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_control_evaluator_galileo"]

# For local dev, use override to resolve from workspace
[tool.uv.sources]
agent-control-evaluators = { path = "../../builtin", editable = true }
agent-control-models = { path = "../../../models", editable = true }
